--- a/templates/forms_requests/user/request_form_user.html
+++ b/templates/forms_requests/user/request_form_user.html
@@ -20,50 +20,63 @@
         <div class="tab" id="tab-completados">COMPLETADOS</div>
     </div>
 
-    <!-- Lista de formularios disponibles -->
-    <div class="form-list" id="list-disponibles">
-        <div class="form-item mb-3">
-            <i class="form-icon bi bi-file-earmark-text-fill"></i>
-            <div class="form-name">Constancia laboral<p style="font-size: 0.7rem;">En caso de requerir sello pasar a RR.HH.</p></div>
-            <div class="form-actions">
-                <a href="{% url 'constancia_laboral' %}" target="_blank" class="btn btn-outline-primary">
-                    Solicitar
-                </a>
-            </div>
-        </div>
+    <!-- Contenido de pestañas -->
 
-        <div class="form-item mb-3">
-            <i class="form-icon bi bi-file-earmark-text-fill"></i>
-            <div class="form-name">Constancia especial<p style="font-size: 0.7rem;">En caso de requerir sello pasar a RR.HH.</p></div>
-            <div class="form-actions">
-                <a href="{% url 'constancia_especial' %}" class="btn btn-outline-primary" target="_blank">
-                    Solicitar
-                </a>
+    <!-- DISPONIBLES -->
+    <div id="contenedor-disponibles">
+        <div class="form-list" id="list-disponibles">
+            <div class="form-item mb-3">
+                <i class="form-icon bi bi-file-earmark-text-fill"></i>
+                <div class="form-name">Constancia laboral
+                    <p style="font-size: 0.7rem;">En caso de requerir sello pasar a RR.HH.</p>
+                </div>
+                <div class="form-actions">
+                    <a href="{% url 'constancia_laboral' %}" target="_blank" class="btn btn-outline-primary">Solicitar</a>
+                </div>
             </div>
-        </div>
 
-        <div class="form-item mb-3">
-            <i class="form-icon bi bi-file-earmark-text-fill"></i>
-            <div class="form-name">Requisición de personal</div>
-            <div class="form-actions">
-                <a href="{% url 'requisicion_personal' %}" class="btn btn-outline-primary">
-                    Solicitar
-                </a>
+            <div class="form-item mb-3">
+                <i class="form-icon bi bi-file-earmark-text-fill"></i>
+                <div class="form-name">Constancia especial
+                    <p style="font-size: 0.7rem;">En caso de requerir sello pasar a RR.HH.</p>
+                </div>
+                <div class="form-actions">
+                    <a href="{% url 'constancia_especial' %}" target="_blank" class="btn btn-outline-primary">Solicitar</a>
+                </div>
             </div>
-        </div>
 
-        {% if perms.forms_requests.puede_solicitar_guarderia %}
+            {% if perms.forms_requests.puede_solicitar_personal %}
+            <div class="form-item mb-3">
+                <i class="form-icon bi bi-file-earmark-text-fill"></i>
+                <div class="form-name">Requisición de personal</div>
+                <div class="form-actions">
+                    <a href="{% url 'requisicion_personal' %}" class="btn btn-outline-primary">Solicitar</a>
+                </div>
+            </div>
+            {% endif %}
+
+            {% if perms.forms_requests.puede_solicitar_guarderia %}
             <div class="form-item mb-3">
                 <i class="form-icon bi bi-file-earmark-text-fill"></i>
                 <div class="form-name">Constancia de guardería</div>
                 <div class="form-actions">
-                    <a href="#" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalGuarderia">
-                        Solicitar
-                    </a>
+                    <a href="#" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalGuarderia">Solicitar</a>
                 </div>
             </div>
-        {% endif %}
+            {% endif %}
+        </div>
+    </div>
 
+    <!-- COMPLETADOS -->
+    <div id="contenedor-completados" style="display: none;">
+        <div class="form-list">
+            {% if perms.forms_requests.puede_solicitar_guarderia %}
+            <div class="form-item mb-3">
+                <i class="form-icon bi bi-file-earmark-text-fill"></i>
+                <div class="form-name">No tienes constancias completadas aún.</div>
+            </div>
+            {% endif %}
+        </div>
     </div>
 </div>
 
