--- a/templates/authapp/home_user.html
+++ b/templates/authapp/home_user.html
@@ -39,7 +39,7 @@
 </style>
 
 <div class="background-wrapper p-4">
-<h1>Bienvenid@ {{ user.first_name }} !!!! <br> Selecciona el módulo de cursos para seguir descubriendo. </h1>
+<h1>¡Bienvenid@ {{ user.first_name }}! <br> Selecciona el módulo de cursos para seguir descubriendo. </h1>
   <h2 class="mb-4"><br>Acumulado fondo de ahorro </h2>
 
   <div class="progress mb-4">
@@ -74,7 +74,7 @@
       <div class="quick-access-card">
         <h6>Tus datos</h6>
         <p>próximamente</p>
-        <a href="#" class="btn btn-success btn-sm mt-2">→</a>
+        <a href="#" class="btn btn-success btn-sm mt-2">Ir →</a>
       </div>
     </div>
   </div>
