--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -15,6 +15,11 @@
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingsDropdown">
+                    {% if not request.user.is_superuser %}
+                    <li>
+                        <a class="dropdown-item" >Cambiar de estación</a>
+                    </li>
+                    {% endif %}
                 <li>
                     <a class="dropdown-item" href="{% url 'password_change' %}">Cambiar contraseña</a>
                 </li>
