se le agrego el estado al modelo de constancia Guarderia

--- a/templates/forms_requests/user/request_form_user.html
+++ b/templates/forms_requests/user/request_form_user.html
@@ -61,7 +61,7 @@
                 <i class="form-icon bi bi-file-earmark-text-fill"></i>
                 <div class="form-name">Constancia de guardería</div>
                 <div class="form-actions">
-                    <a href="#" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalGuarderia">Solicitar</a>
+                    <a class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalGuarderia">Solicitar</a>
                 </div>
             </div>
             {% endif %}
